--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,1 +1,96 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Comapatible" content="IE=edge">
+	<title>Assignment Solution for Module 3</title>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+ 	<!-- Header -->
+	<header>
+		<nav id="header-nav" class="navbar navbar-default">
+			<div class="container">
+				<div class="navbar-header">
+					
+						<a href="index.html"><h1>Food, LLC</h1></a>
 
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+        				<span class="sr-only">Toggle navigation</span>
+        				<span class="icon-bar"></span>
+        				<span class="icon-bar"></span>
+        				<span class="icon-bar"></span>
+      				</button>
+				</div>
+
+				<div class="collapse navbar-collapse" id="collapsable-nav">
+      				<ul id="nav-list" class="nav navbar-nav navbar-right hidden-sm hidden-md hidden-lg  ">
+
+      					<li >
+        					<a href="index.html">Chicken</a>
+        				</li>
+
+        				<li>
+        					<a href="Mutton.html">Mutton</a>
+        				</li>
+
+        				<li>
+        					<a href="Sushi.html">Sushi</a>
+        				</li>
+      				</ul> <!-- nav-list -->
+      			</div> <!-- collapse navbar-collapse -->
+			</div>
+		</nav>
+	</header>
+
+	<!-- End Header -->
+
+
+
+
+
+
+
+	<!-- Home Page -->
+
+	<div class=" container page-heading text-center"><h2>Our Menu</h2></div>
+	<div id="main-content" class="container">
+		<div class="item-title text-center"><h3>Chicken</h3></div>
+
+		<div class="item-description">
+			Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo voluptate itaque dolores quod, ipsam numquam, odio hic blanditiis possimus, molestiae architecto maxime nihil deserunt. Quasi assumenda neque quaerat totam qui. Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Maiores, adipisci. Nostrum similique, obcaecati praesentium ratione, sit porro, nihil sunt aliquid vitae eius vero voluptatum optio, a velit? Obcaecati, nihil, quam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit esse praesentium, iure, provident repudiandae voluptatibus quae asperiores voluptate nostrum quas rem non ratione deleniti hic facere ex reiciendis quibusdam eum. Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Et fugit autem expedita, consequuntur quos rerum quibusdam velit recusandae doloribus, tempore, beatae. Incidunt eos est provident laborum id mollitia sit fugit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere blanditiis omnis quis culpa, sapiente possimus reiciendis eaque sunt nemo repellat accusantium sint laudantium aliquid! Adipisci pariatur eius enim sapiente mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam molestias vel, voluptates libero labore. Nam esse officiis culpa ratione. Fuga cum nisi ullam, in eveniet alias natus temporibus, enim labore!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo voluptate itaque dolores quod, ipsam numquam, odio hic blanditiis possimus, molestiae architecto maxime nihil deserunt. Quasi assumenda neque quaerat totam qui. Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Maiores, adipisci. Nostrum similique, obcaecati praesentium ratione, sit porro, nihil sunt aliquid vitae eius vero voluptatum optio, a velit? Obcaecati, nihil, quam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit esse praesentium, iure, provident repudiandae voluptatibus quae asperiores voluptate nostrum quas rem non ratione deleniti hic facere ex reiciendis quibusdam eum. Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Et fugit autem expedita, consequuntur quos rerum quibusdam velit recusandae doloribus, tempore, beatae. Incidunt eos est provident laborum id mollitia sit fugit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere blanditiis omnis quis culpa, sapiente possimus reiciendis eaque sunt nemo repellat accusantium sint laudantium aliquid! Adipisci pariatur eius enim sapiente mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam molestias vel, voluptates libero labore. Nam esse officiis culpa ratione. Fuga cum nisi ullam, in eveniet alias natus temporibus, enim labore!
+		</div>
+	</div>
+<br>
+	<div id="main-content" class="container">
+		<div class="item-title text-center"><h3>Mutton</h3></div>
+
+		<div class="item-description">
+			Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo voluptate itaque dolores quod, ipsam numquam, odio hic blanditiis possimus, molestiae architecto maxime nihil deserunt. Quasi assumenda neque quaerat totam qui. Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Maiores, adipisci. Nostrum similique, obcaecati praesentium ratione, sit porro, nihil sunt aliquid vitae eius vero voluptatum optio, a velit? Obcaecati, nihil, quam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit esse praesentium, iure, provident repudiandae voluptatibus quae asperiores voluptate nostrum quas rem non ratione deleniti hic facere ex reiciendis quibusdam eum. Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Et fugit autem expedita, consequuntur quos rerum quibusdam velit recusandae doloribus, tempore, beatae. Incidunt eos est provident laborum id mollitia sit fugit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere blanditiis omnis quis culpa, sapiente possimus reiciendis eaque sunt nemo repellat accusantium sint laudantium aliquid! Adipisci pariatur eius enim sapiente mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam molestias vel, voluptates libero labore. Nam esse officiis culpa ratione. Fuga cum nisi ullam, in eveniet alias natus temporibus, enim labore!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo voluptate itaque dolores quod, ipsam numquam, odio hic blanditiis possimus, molestiae architecto maxime nihil deserunt. Quasi assumenda neque quaerat totam qui. Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Maiores, adipisci. Nostrum similique, obcaecati praesentium ratione, sit porro, nihil sunt aliquid vitae eius vero voluptatum optio, a velit? Obcaecati, nihil, quam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit esse praesentium, iure, provident repudiandae voluptatibus quae asperiores voluptate nostrum quas rem non ratione deleniti hic facere ex reiciendis quibusdam eum. Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Et fugit autem expedita, consequuntur quos rerum quibusdam velit recusandae doloribus, tempore, beatae. Incidunt eos est provident laborum id mollitia sit fugit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere blanditiis omnis quis culpa, sapiente possimus reiciendis eaque sunt nemo repellat accusantium sint laudantium aliquid! Adipisci pariatur eius enim sapiente mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam molestias vel, voluptates libero labore. Nam esse officiis culpa ratione. Fuga cum nisi ullam, in eveniet alias natus temporibus, enim labore!
+		</div>
+	</div>
+<br>
+	<div id="main-content" class="container last">
+		<div class="item-title text-center"><h3>Sushi</h3></div>
+
+		<div class="item-description">
+			Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo voluptate itaque dolores quod, ipsam numquam, odio hic blanditiis possimus, molestiae architecto maxime nihil deserunt. Quasi assumenda neque quaerat totam qui. Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Maiores, adipisci. Nostrum similique, obcaecati praesentium ratione, sit porro, nihil sunt aliquid vitae eius vero voluptatum optio, a velit? Obcaecati, nihil, quam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit esse praesentium, iure, provident repudiandae voluptatibus quae asperiores voluptate nostrum quas rem non ratione deleniti hic facere ex reiciendis quibusdam eum. Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Et fugit autem expedita, consequuntur quos rerum quibusdam velit recusandae doloribus, tempore, beatae. Incidunt eos est provident laborum id mollitia sit fugit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere blanditiis omnis quis culpa, sapiente possimus reiciendis eaque sunt nemo repellat accusantium sint laudantium aliquid! Adipisci pariatur eius enim sapiente mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam molestias vel, voluptates libero labore. Nam esse officiis culpa ratione. Fuga cum nisi ullam, in eveniet alias natus temporibus, enim labore!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo voluptate itaque dolores quod, ipsam numquam, odio hic blanditiis possimus, molestiae architecto maxime nihil deserunt. Quasi assumenda neque quaerat totam qui. Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Maiores, adipisci. Nostrum similique, obcaecati praesentium ratione, sit porro, nihil sunt aliquid vitae eius vero voluptatum optio, a velit? Obcaecati, nihil, quam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit esse praesentium, iure, provident repudiandae voluptatibus quae asperiores voluptate nostrum quas rem non ratione deleniti hic facere ex reiciendis quibusdam eum. Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Et fugit autem expedita, consequuntur quos rerum quibusdam velit recusandae doloribus, tempore, beatae. Incidunt eos est provident laborum id mollitia sit fugit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere blanditiis omnis quis culpa, sapiente possimus reiciendis eaque sunt nemo repellat accusantium sint laudantium aliquid! Adipisci pariatur eius enim sapiente mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam molestias vel, voluptates libero labore. Nam esse officiis culpa ratione. Fuga cum nisi ullam, in eveniet alias natus temporibus, enim labore!
+		</div>
+	</div>
+	<!-- End Home Page -->
+
+
+
+
+
+
+
+
+	<!-- JQuery (Bootstrap JS plugin depend on it) -->
+	<script src="js/jquery-3.6.0.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/script.js"></script>
+</body>
+</html>
