--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Comapatible" content="IE=edge">
 	<title>Assignment Solution for Module 3</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
  	<!-- Header -->
