--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Comapatible" content="IE=edge">
 	<title>Assignment Solution for Module 3</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="bootstrap.min.css">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -89,8 +89,8 @@
 
 
 	<!-- JQuery (Bootstrap JS plugin depend on it) -->
-	<script src="js/jquery-3.6.0.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/script.js"></script>
+	<script src="jquery-3.6.0.js"></script>
+	<script src="bootstrap.min.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
